# security-shallots

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  SIGIL.md.example  THREAT_ENGINE_DESIGN.md  config.example.yaml  docker-compose.yml  edge_gate_shadow.py  pyproject.toml  requirements.txt  sync_clusters.py
argus/: README.md  config.example.toml  config.example.yaml  pyproject.toml
argus/argus/: cli.py  config.py  daemon.py  listener.py  metering.py  models.py  normalize.py  settings_ui.py  tray.py
argus/argus/actions/: __init__.py  evidence.py  lock.py  network_isolation.py
argus/argus/core/: __init__.py  disarm.py  events.py  persistence.py  pin.py  state.py  timelock.py  updater.py
argus/argus/emitters/: __init__.py  base.py  jsonl.py
argus/argus/hooks/: __init__.py  scheduled_tasks.py
argus/argus/monitors/: __init__.py  ads.py  anti_tamper.py  audit_policy.py  browser_extensions.py  defender_health.py  dns.py  file_sentinel.py  firewall.py  inactivity.py  network_egress.py  persistence.py  posture.py  process.py  registry.py  service.py  session.py  types.py  usb.py  windows_events.py  wmi_subs.py
argus/argus/sinks/: __init__.py  jsonl.py  sms.py  syslog.py  webhook.py
argus/argus/sources/: __init__.py  base.py  journalctl.py
argus/tests/: test_anti_tamper_monitor.py  test_auth_log_replay_regression.py  test_daemon_lockdown_gate.py  test_disarm.py  test_evidence_action.py  test_file_sentinel.py  test_heartbeat_event.py  test_jsonl_sink.py  test_metering.py  test_network_egress_monitor.py  test_normalize.py  test_persistence.py  test_persistence_monitor.py  test_process_monitor.py  test_session_monitor.py  test_state_machine.py  test_syslog_sink.py  test_webhook_sink.py
data/: inventory_seed.example.yaml  posture_policy.example.yaml
docs/: DETECTION_EVAL_METHODOLOGY.md  DR.md  GUIDE.md  HOMELAB_READINESS.md  NETWORK_LOG_SOURCES.yaml  SMALL_FOOTPRINT_SECURITY_POSTURE_UPGRADES.md  SPAN_READINESS.md  TUNING.md
setup/: deploy-linux-service  shallot-doctor  (+2 more)
(+210 files in other folders)
